fixed issue where project card were not responsive

--- a/src/components/pages/Project.css
+++ b/src/components/pages/Project.css
@@ -16,7 +16,6 @@
     flex-direction: column;
     align-items: center;
     padding: 1rem;
-    height: auto;
   }
 
 @media only screen and (max-width: 1000px) {
@@ -28,6 +27,7 @@
 
 #projectGrid {
     margin-top: 2rem;
+    width: 100%;
 }
 
 
